<resources>
    <string name="app_name">Atelier</string>
    <string name="account">حسابي</string>
    <string name="categories">الأقسام</string>
    <string name="contact">تواصل معنا</string>
    <string name="about">عن أتيله</string>
    <string name="lang">ENG</string>
    <string name="exit">خروج</string>
    <string name="navigation_drawer_open" translatable="false">drawer_open</string>
    <string name="navigation_drawer_close" translatable="false">drawer_close</string>
    <string name="test_title">العنوان</string>
    <string name="test_shop_name">بوما</string>
    <string name="test_product_title">إسم المنتج سوف يوضع هنا</string>
    <string name="test_price">39.000 KWD</string>
    <string name="test_product_details">للتوصيل لباب المنزل مجانا</string>
    <string name="size">المقاس</string>
    <string name="size_cm">المقاس بالسنتيمتر</string>
    <string name="Sleeve">الكم</string>
    <string name="chest">الصدر</string>
    <string name="shoulder">الكتف</string>
    <string name="length">الطول</string>
    <string name="cm">سم</string>
    <string name="color">اللون</string>
    <string name="notes">إضافة ملاحظات</string>
    <string name="write_something">إكتب شيئا</string>
    <string name="related_products">المنتجات ذات الصلة</string>
    <string name="add_to_cart">إضافة للسلة</string>
    <string name="test_size">XL</string>
    <string name="total_price">المجموع</string>
    <string name="checkout">الدفع</string>
    <string name="master">ماستر كارد</string>
    <string name="visa">فيزا كارد</string>
    <string name="key_net">كي نت</string>
    <string name="my_favorite">المفضلة</string>
    <string name="edit_profile">تعديل الحساب</string>
    <string name="my_orders">طلباتي</string>
    <string name="logout">تسجيل خروج</string>
    <string name="test_about_us">هذا النص هو مثال لنص يمكن أن يستبدل في نفسالمساحة
        لقد تم توليد هذا النص من مولد النص العربى،
        حيث يمكنك أن تولد مثل هذا النص
    </string>
    <string name="DataMissing">عذرا, هناك بعض البيانات المطلوبة غير موجودة</string>
    <string name="name">الإسم</string>
    <string name="phone">رقم الهاتف</string>
    <string name="mail">الإيميل</string>
    <string name="password">الرقم السري</string>
    <string name="save">حفظ</string>
    <string name="user_name">إسم المستخدم</string>
    <string name="password2">كلمة المرور</string>
    <string name="forget_password">هل نسيت كلمة السر؟</string>
    <string name="skip">الدخول كزائر</string>
    <string name="create_account">إنشاء حساب</string>
    <string name="login">تسجيل الدخول</string>
    <string name="mail_address">البريد الإلكتروني</string>
    <string name="agree">موافق</string>
    <string name="terms">علي الأحكام والشروط</string>
    <string name="phone2">الجوال</string>
    <string name="test_category_name">عبايات 1</string>
    <string name="test_product_details2">,فساتين خروج , قطن , زهرى</string>
    <string name="send">إرسال</string>
    <string name="required_fields">من فضلك قم بملئ جميع البيانات المطلوبة</string>
    <string name="agree_required">من فضلك قم بالموافقة علي الشروط والأحكام</string>
    <string name="dresses">عبايات</string>
    <string name="suits">بدل استقبال</string>
    <string name="cart">سلة المشتريات</string>
    <string name="atelier">أتيله</string>
    <string name="payment">الدفع</string>
    <string name="user_name_required">من فضلك قم بإدخال إسم المستخدم الخاص بك</string>
    <string name="phone_required">من فضلك قم بإدخال رقم الهاتف</string>
    <string name="mail_required">من فضلك قم بإدخال البريد الإلكتروني</string>
    <string name="password_required">من فضلك قم بإدخال كلمة المرور</string>
    <string name="successfully_updated">تم تعديل بيانات الصفحة الشخصية بنجاح</string>
    <string name="maximum">الكمية المتاحة من هذا المنتج هي</string>
    <string name="empty_cart">سلة المشتريات فارغة</string>
    <string name="sure_for_delete">هل تريد إزالة هذا المنتج من العربة ؟</string>
    <string name="order_date">تاريخ الطلب</string>
    <string name="order_status">حالة الطلب</string>
    <string name="order_number">رقم الطلب</string>
    <string name="retry_message">لم يتم دفع هذا الطلب بعد. للدفع الان, انقر فوق الزر.</string>
    <string name="re_order">إعادة الطلب</string>
    <string name="PDFInvoice">فاتورة PDF</string>
    <string name="quantity">الكمية</string>
    <string name="delete">مسح</string>
    <string name="edit">تعديل</string>
    <string name="add_address">إضافة عنوان</string>
    <string name="next">التالي</string>
    <string name="select_area">اختر المحافظة</string>
    <string name="select_country">اختر الدولة</string>
    <string name="address">العنوان بالتفصيل</string>
    <string name="order">اطلب</string>
    <string name="order_total">إجمالي الطلب</string>
    <string name="state">المحافظة</string>
    <string name="country">الدولة</string>
    <string name="billing_address">العناوين</string>
    <string name="payment_method">طريقة الدفع:</string>
    <string name="payment_status">حالة الدفع:</string>
    <string name="products">المنتجات</string>  
    <string name="order_done"> تمت عملية الشراء بنجاح . الرجاء التواصل مع التاجر/مزود الخدمه من أجل الحصول على الخدمة. </string>
    <string name="confirm">تأكيد</string>
    <string name="file_manager">تم تحميل الملف , متاح الآن في ذاكرة الهاتف</string>
    <string name="my_addresses">عناويني</string>
    <string name="delete_address">هل انت متأكد انك تريد تحذف هذا العنوان؟ </string>
    <string name="select_address">من فضلك قم بإختيار العنوان أولا</string>
    <string name="first_name">الإسم الأول</string>
    <string name="last_name">الإسم الأخير</string>
    <string name="first_name_required">من فضلك قم بإدخال الإسم الأول</string>
    <string name="last_name_required">من فضلك قم بإدخال الإسم الأخير</string>
    <string name="country_required">من فضلك قم بإختيار الدولة</string>
    <string name="state_required">من فضلك قم بإختيار المدينة</string>
    <string name="product_added">تم إضافة المنتج لسلة المشتريات بنجاح</string>
    <string name="continue_shopping">الإستمرار في التسوق</string>
    <string name="product_favorites_added">تم إضافة المنتج إلي لقائمة المفضلة بنجاح</string>
    <string name="order_details">تفاصيل الطلب</string>
    <string name="price">السعر</string>
    <string name="message_sent">تم إرسال رسالتك بنجاح</string>
    <string name="name_required">من فضلك قم بإدخال اسمك</string>
    <string name="message_required">من فضلك قم بإدخال الرسالة</string>
    <string name="subject">موضوع الرسالة</string>
    <string name="subject_required">من فضلك قم بإدخال عنوان الرسالة</string>
    <string name="recover_password">إستعادة كلمة المرور</string>
    <string name="check_mail">تم إرسال رسالة عبر بريدك الإلكتروني</string>
    <string name="change_password">تغيير كلمة المرور</string>
    <string name="confirm_password">تأكيد كلمة المرور</string>
    <string name="old_password">كلمة المرور الحالية</string>
    <string name="old_password_required">برجاء إدخال كلمة المرور الحالية</string>
    <string name="new_password_required">برجاء إدخال كلمة المرور الجديدة</string>
    <string name="confirm_password_required">برجاء إعادة إدخال كلمة المرور</string>
    <string name="password_match">كلمة المرور غير متطابقة</string>
    <string name="updated_password">تم تحديث كلمة المرور بنجاح</string>
    <string name="unfavorite">تم إزالة المنتج من قائمة المفضلة</string>
    <string name="empty_favorites">قائمة المفضلة فارغة</string>
    <string name="test_attribute_title">عنوان الصفة</string>
    <string name="OperationFailed">فشل العملية</string>
    <string name="new_password">كلمة المرور الجديدة</string>
    <string name="cancel">إلغاء</string>
    <string name="select">اختر</string>
    <string name="apply_coupon">الكوبون</string>
    <string name="sub_total_price">الإجمالي</string>
    <string name="discount">الخصم</string>
    <string name="enter_coupon">ادخل الكوبون</string>
    <string name="main_page">الرئيسية</string>
    <string name="remove">إزالة</string>
    <string name="no_products">لا توجد منتجات</string>
    <string name="message">الرسالة ...</string>
    <string name="product_details">تفاصيل المنتج</string>
    <string name="enter_size">قم بإدخال المقاسات أولا</string>
    <string name="empty_orders">قائمة الطلبات فارغة</string>
    <string name="empty_products">قائمة المنتجات فارغة</string>
    <string name="empty_search">لا يوجد نتائج للبحث</string>
    <string name="select_size">قم بإختيار المقاس أولا</string>
    <string name="no_brands">لا يوجد ماركات لعرضها</string>
    <string name="enter_email">قم بإدخال البريد الإلكتروني</string>
    <string name="deliveryCost">خدمة التوصيل</string>
    <string name="inch">Inches</string>
    <string name="size_inch">المقاس بالبوصة</string>
    <string name="select_city">اختر المدينة</string>
    <string name="select_state">اختر المحافظة</string>
    <string name="city_required">قم بإختيار المدينة</string>
    <string name="city">المدينة</string>
    <string name="sameAddress">التوصيل لنفس العنوان</string>
    <string name="selectTheSameVendor">من فضلك قم بالإختيار من نفس البائع</string>
    <string name="shipping_cost">تكلفة الشحن</string>

</resources>
