<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
   >

<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="73dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/logo" />

    <EditText
        android:id="@+id/login_editText_userName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/user_name"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:fontFamily="@font/droid_arabic_kufi"
        android:textColorHint="@color/lightGray2"
        android:paddingBottom="12dp"
        android:paddingTop="12dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:background="@drawable/tv_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView19" />

    <EditText
        android:id="@+id/login_editText_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textAlignment="viewStart"
        android:hint="@string/password2"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:fontFamily="@font/droid_arabic_kufi"
        android:textColorHint="@color/lightGray2"
        android:paddingBottom="12dp"
        android:paddingTop="12dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:background="@drawable/tv_bg"
        app:layout_constraintEnd_toEndOf="@+id/login_editText_userName"
        app:layout_constraintStart_toStartOf="@+id/login_editText_userName"
        app:layout_constraintTop_toBottomOf="@+id/login_editText_userName" />

    <TextView
        android:id="@+id/login_txtView_forgetPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/forget_password"
        android:textColor="@color/colorPrimary"
        android:textSize="13sp"
        android:fontFamily="@font/droid_arabic_kufi"
        app:layout_constraintEnd_toEndOf="@+id/login_editText_password"
        app:layout_constraintStart_toStartOf="@+id/login_editText_password"
        app:layout_constraintTop_toBottomOf="@+id/login_editText_password" />

    <Button
        android:id="@+id/login_btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="40dp"
        android:text="@string/login"
        android:background="@color/colorPrimary"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:fontFamily="@font/droid_arabic_kufi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_txtView_forgetPass" />

    <Button
        android:id="@+id/login_btn_createAccount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/create_account"
        android:background="@color/white"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@font/droid_arabic_kufi"
        app:layout_constraintEnd_toEndOf="@+id/login_btn_login"
        app:layout_constraintStart_toStartOf="@+id/login_btn_login"
        app:layout_constraintTop_toBottomOf="@+id/login_btn_login" />


    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/droid_arabic_kufi"
        android:text="@string/skip"
        android:textColor="@color/colorPrimary"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/login_btn_createAccount"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="@+id/login_btn_createAccount"
        app:layout_constraintTop_toBottomOf="@+id/login_btn_createAccount"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/login_imgView_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView25"
        app:layout_constraintStart_toEndOf="@+id/textView25"
        app:layout_constraintTop_toTopOf="@+id/textView25"
        app:srcCompat="@mipmap/icon_skip_arrow" />

    <View
        android:id="@+id/login_view_skip"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView25"
        app:layout_constraintEnd_toEndOf="@+id/login_imgView_arrow"
        app:layout_constraintStart_toStartOf="@+id/textView25"
        app:layout_constraintTop_toTopOf="@+id/textView25" />

    <TextView
        android:id="@+id/login_tv_changeLang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:text="@string/lang"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/loading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:indeterminateTint="@color/colorPrimary"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>