<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_ground"
    android:layoutDirection="rtl"
    android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@mipmap/menu_logo"
            android:layout_marginTop="55dp"/>

    <LinearLayout
        android:id="@+id/main_linearLayout_accountOrLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="60dp"
        android:gravity="center">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="60dp"
            app:srcCompat="@mipmap/icon_menu_account" />

        <TextView
            android:id="@+id/main_txtView_accountOrLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="16sp"
            android:layout_marginRight="28dp"
            android:fontFamily="@font/droid_arabic_kufi"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_linearLayout_contactUs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="60dp"
            app:srcCompat="@mipmap/icon_menu_contact" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact"
            android:textSize="16sp"
            android:layout_marginRight="28dp"
            android:fontFamily="@font/droid_arabic_kufi"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_linearLayout_aboutUs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="60dp"
            app:srcCompat="@mipmap/icon_menu_about" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textSize="16sp"
            android:layout_marginRight="28dp"
            android:fontFamily="@font/droid_arabic_kufi"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_linearLayout_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="60dp"
            app:srcCompat="@mipmap/icon_menu_lang" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lang"
            android:textSize="16sp"
            android:layout_marginRight="28dp"
            android:fontFamily="@font/droid_arabic_kufi"/>


    </LinearLayout>

</LinearLayout>