<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <TextView
        android:id="@+id/address_txtView_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/droid_arabic_kufi"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        android:text="@string/test_title"
        android:textColor="#70635a"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address_txtView_title">

        <TextView
            android:id="@+id/address_txtView_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/address_txtView_title"
            android:layout_alignParentEnd="true"
            android:fontFamily="@font/droid_arabic_kufi"
            android:padding="12dp"
            android:text="@string/delete"
            android:textColor="#ffe61d44"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="67dp" />

        <TextView
            android:id="@+id/address_txtView_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/address_txtView_title"
            android:layout_toStartOf="@+id/address_txtView_delete"
            android:fontFamily="@font/droid_arabic_kufi"
            android:padding="12dp"
            android:layout_marginStart="8dp"
            android:text="@string/edit"
            android:textColor="@color/colorPrimary"
            tools:layout_editor_absoluteX="97dp"
            tools:layout_editor_absoluteY="77dp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

</android.support.constraint.ConstraintLayout>